---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "prql target:sql.postgres\n\nlet invoices_wrap = (\n  from invoices\n  select { invoice_id, billing_country }\n)\n\nlet employees_wrap = (\n  from employees\n  select { employee_id, country }\n)\n\nlet invoices_final = (\n  from invoices_wrap\n  select { invoice_id, billing_country }\n  derive { source = f\"{billing_country} from invoices\" }\n)\n\nlet employees_final = (\n  from employees_wrap\n  select { employee_id, country }\n  derive { source = f\"{country} from employees\" }\n)\n\nfrom invoices_final\nappend employees_final\n"
input_file: prqlc/prqlc/tests/integration/queries/append_cte_complex.prql
snapshot_kind: text
---
prql target:sql.postgres

let invoices_wrap = (
  from invoices
  select {invoice_id, billing_country}
)

let employees_wrap = (
  from employees
  select {employee_id, country}
)

let invoices_final = (
  from invoices_wrap
  select {invoice_id, billing_country}
  derive {
    source = f"{billing_country} from invoices",
  }
)

let employees_final = (
  from employees_wrap
  select {employee_id, country}
  derive {source = f"{country} from employees"}
)

from invoices_final
append employees_final
